force-app/main/default/objects/Field_Filter__c/Field_Filter__c.object-meta.xml
<CustomObject>
    <label>Field Filter</label>
    <nameField>
        <displayFormat>FFN-{00000000}</displayFormat>
        <label>Field Filter No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>