force-app/main/default/objects/Field_Filter__c/fields/Affected_Field_Meta_Data__c.field-meta.xml
<CustomField>
    <fullName>Affected_Field_Meta_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Field Meta Data</label>
    <referenceTo>Field_Meta_Data__c</referenceTo>
    <relationshipLabel>Affected Field Meta Data</relationshipLabel>
    <relationshipName>Target_Field</relationshipName>
    <type>Lookup</type>
</CustomField>