force-app/main/default/objects/Field_Filter__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <formula>Affected_Field_Meta_Data__r.Card_Meta_Data__r.Application_Meta_Data__r.Name</formula>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>