force-app/main/default/objects/Field_Filter__c/fields/Controlling_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Field_Value__c</fullName>
    <label>Controlling Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>