force-app/main/default/objects/Field_Filter__c/fields/Field_attribute_to_be_updated__c.field-meta.xml
<CustomField>
    <fullName>Field_attribute_to_be_updated__c</fullName>
    <label>Field attribute to be updated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Read_Only</fullName>
            </value>
            <value>
                <fullName>Values</fullName>
            </value>
            <value>
                <fullName>Popover_Help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>