force-app/main/default/objects/Field_Filter__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden (Override)</label>
    <type>Checkbox</type>
</CustomField>