force-app/main/default/objects/Field_Filter__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>