force-app/main/default/objects/Field_Filter__c/fields/Parent_Field_Filter__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Field Filter</label>
    <referenceTo>Field_Filter__c</referenceTo>
    <relationshipLabel>Combination field filter</relationshipLabel>
    <relationshipName>Field_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>