force-app/main/default/objects/Field_Filter__c/fields/Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Placeholder__c</fullName>
    <label>Placeholder (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>