force-app/main/default/objects/Field_Filter__c/fields/Popover_Help__c.field-meta.xml
<CustomField>
    <fullName>Popover_Help__c</fullName>
    <description>If this field is populated, mouse over help will display on the control</description>
    <inlineHelpText>If this field is populated, mouse over help will display on the control</inlineHelpText>
    <label>Popover Help (Override)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>