force-app/main/default/objects/Field_Filter__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to specify if the fields is for read only</description>
    <label>Read Only (Override)</label>
    <type>Checkbox</type>
</CustomField>