force-app/main/default/objects/Field_Filter__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required (Override)</label>
    <type>Checkbox</type>
</CustomField>