force-app/main/default/objects/Field_Filter__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>